update notebook clustering

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Machine Learning Clustering with Python\n",
     "\n",
-    "Data yang digunakan adalah informasi kartu kredit customer.\n",
+    "Data yang digunakan adalah informasi kartu kredit customer. Data dapat diakses di [kaggle](https://www.kaggle.com/datasets/aryashah2k/credit-card-customer-data)\n",
     "\n",
     "Algoritma yang akan digunakan adalah K-Means dan DBSCAN. Performa masing masing algoritma akan diukur di akhir notebook ini."
    ]
